@@ -2972,8 +2972,6 @@ void yywarning2(const char *s, ...) {
 boolean_t parse(char *controlfile) {
         ASSERT(controlfile);
 
-        servicelist = tail = current = NULL;
-
         if ((yyin = fopen(controlfile,"r")) == (FILE *)NULL) {
                 LogError("Cannot open the control file '%s' -- %s\n", controlfile, STRERROR);
                 return false;
@@ -3017,6 +3015,7 @@ boolean_t parse(char *controlfile) {
  * Initialize objects used by the parser.
  */
 static void preparse() {
+        servicelist = tail = current = NULL;
         /* Set instance incarnation ID */
         time(&Run.incarnation);
         /* Reset lexer */
@@ -3219,6 +3218,7 @@ static Service_T createservice(Service_Type type, char *name, char *value, State
         current->monitor  = Monitor_Init;
         current->onreboot = Run.onreboot;
         current->name     = name;
+        current->name_escaped = Util_urlEncode(name, false);
         current->check    = check;
         current->path     = value;
 
@@ -3345,7 +3345,6 @@ static void addservicegroup(char *name) {
 
 /*
  * Add a dependant entry to the current service dependant list
- *
  */
 static void adddependant(char *dependant) {
         Dependant_T d;
@@ -3358,6 +3357,7 @@ static void adddependant(char *dependant) {
                 d->next = current->dependantlist;
 
         d->dependant = dependant;
+        d->dependant_escaped = Util_urlEncode(dependant, false);
         current->dependantlist = d;
 
 }
@@ -4826,7 +4826,6 @@ static int check_perm(int perm) {
  * Assures that graph is a Directed Acyclic Graph (DAG).
  */
 static void check_depend() {
-        Service_T s;
         Service_T depends_on = NULL;
         Service_T* dlt = &depend_list; /* the current tail of it                                 */
         boolean_t done;                /* no unvisited nodes left?                               */
@@ -4836,7 +4835,7 @@ static void check_depend() {
         do {
                 done = true;
                 found_some = false;
-                for (s = servicelist; s; s = s->next) {
+                for (Service_T s = servicelist; s; s = s->next) {
                         Dependant_T d;
                         if (s->visited)
                                 continue;
@@ -4845,7 +4844,7 @@ static void check_depend() {
                         for (d = s->dependantlist; d; d = d->next) {
                                 Service_T dp = Util_getService(d->dependant);
                                 if (! dp) {
-                                        LogError("Depend service '%s' is not defined in the control file\n", d->dependant);
+                                        LogError("Depending service '%s' is not defined in the control file\n", d->dependant);
                                         exit(1);
                                 }
                                 if (! dp->visited) {
@@ -4871,7 +4870,7 @@ static void check_depend() {
         ASSERT(depend_list);
         servicelist = depend_list;
 
-        for (s = depend_list; s; s = s->next_depend)
+        for (Service_T s = depend_list; s; s = s->next_depend)
                 s->next = s->next_depend;
 }
 
